# ChangeLog for net-dns/c-ares
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/c-ares/ChangeLog,v 1.3 2005/04/21 12:35:27 dragonheart Exp $

*c-ares-1.2.1 (21 Apr 2005)

  21 Apr 2005; Daniel Black <dragonheart@gentoo.org> +c-ares-1.2.1.ebuild:
  Version bump as per bug #89690. Thanks to Tupone Alfredo <alfredo@tupone.it>

  28 Aug 2004; David Holm <dholm@gentoo.org> c-ares-1.2.0.ebuild:
  Added to ~ppc.

*c-ares-1.2.0 (15 Aug 2004)

  15 Aug 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +c-ares-1.2.0.ebuild:
  Initial ebuild. Thanks to Stefan Briesenick <sbriesen@gmx.de> in bug #52288
