@@ -3,14 +3,16 @@ Hash: SHA1
 
 MD5 5080f3dbcb3c85ef2f255f8e64a87a46 c-ares-1.2.0.ebuild 544
 MD5 6d796b061ed1c1337ef157a5f74dab35 metadata.xml 403
-MD5 670d9212c490b2ee5a7d2f6f40f41a71 ChangeLog 674
+MD5 13a322b08c289a0e357230b4b7feff3e ChangeLog 867
 MD5 027312c267cb6f63c09afc6aec03515f c-ares-1.2.1.ebuild 551
+MD5 c6b0a27df8f7e2f11ad7b6ae3f609883 c-ares-1.2.1-r1.ebuild 618
 MD5 141b0263e86d51beb41b240cdb9bd5e7 files/digest-c-ares-1.2.0 64
 MD5 bd65ab3ab5c90d4f6ad98c7394e98f7f files/digest-c-ares-1.2.1 64
+MD5 bd65ab3ab5c90d4f6ad98c7394e98f7f files/digest-c-ares-1.2.1-r1 64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCZ54gmdTrptrqvGERAui1AKCZ8rVhTPAf7Zddik9OGWrfPAqMmQCeO6SI
-Px0okEk37A5TMAxHEUU2qq8=
-=AAVq
+iD8DBQFC2ZuImdTrptrqvGERAhTKAJwK4e4mwFkl3VagJbjwapS9L8QMSQCfR8gW
+L61DG8B0WLnO3GHTAwYMrMs=
+=wC6k
 -----END PGP SIGNATURE-----
