@@ -1,0 +1,24 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-dns/c-ares/c-ares-1.2.1-r1.ebuild,v 1.1 2005/07/16 23:42:50 dragonheart Exp $
+
+DESCRIPTION="C library that resolves names asynchronously"
+SRC_URI="http://daniel.haxx.se/projects/c-ares/${P}.tar.gz"
+HOMEPAGE="http://daniel.haxx.se/projects/c-ares/"
+
+SLOT="0"
+LICENSE="as-is"
+KEYWORDS="~x86 ~ppc"
+IUSE=""
+
+DEPEND="virtual/libc"
+
+src_compile () {
+	econf --enable-shared || die
+	emake || die
+}
+
+src_install () {
+	make DESTDIR=${D} install || die
+	dodoc CHANGES NEWS README*
+}
