@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/c-ares
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/c-ares/ChangeLog,v 1.3 2005/04/21 12:35:27 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/c-ares/ChangeLog,v 1.4 2005/07/16 23:42:50 dragonheart Exp $
+
+*c-ares-1.2.1-r1 (16 Jul 2005)
+
+  16 Jul 2005; Daniel Black <dragonheart@gentoo.org>
+  +c-ares-1.2.1-r1.ebuild:
+  revision bump to enable shared libraries. Bug #99160 thanks to Tupone Alfredo
 
 *c-ares-1.2.1 (21 Apr 2005)
 
